# TempIdea

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  setup_repo.sh
.devcontainer/: devcontainer.json
docs/api/: firmware.md
docs/guides/: lvgl-integration.md
docs/hardware/: setup.md
editor/: globals.xml  project.xml
editor/screens/: main.xml
firmware/: CMakeLists.txt  lv_conf.h  main_rp2350.c  main_sim.c
firmware/app/: app.c  app.h
firmware/hal/: hal.h  hal_mock.c
firmware/include/: config.h
firmware/include/control/: temp_controller.h
firmware/include/drivers/: emc2101.h  gt911.h  st7701.h
firmware/include/ui/: ui_init.h
firmware/ports/rp2350/: rp2350_port.c  rp2350_port.h
firmware/ports/sim/: sdl_port.c  sdl_port.h
firmware/src/: main.c
firmware/src/control/: temp_controller.c
firmware/src/drivers/: emc2101.c  gt911.c  st7701.c
firmware/src/ui/: ui_init.c
firmware/ui/: TempIdea_gen.h
lvgl-project/: .gitignore  file_list_gen.cmake  globals.xml  project.xml
lvgl-project/screens/: main.xml
scripts/: build.sh  flash.sh  setup_dev.sh  sync_lvgl.sh
src/: main.c
src/hal/: hal.h  hal_sim.c
src/port/: sdl_port.c
src/ui/: TempIdea.c  TempIdea.h  TempIdea_gen.c
tools/: sync_ui.sh
